--- a/style.css
+++ b/style.css
@@ -11,3 +11,18 @@ body {
   padding-bottom: 40px;
   background-color: #f5f5f5;
 }
+.inputBox {
+  width: 100%;
+}
+.mainWindow {
+   padding:20px;
+   width: 50%;
+   max-width:700px
+}
+.tbl {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.btnCell {
+  margin-right: 5px;
+}
